# TrackPointSound

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.sh
TrackpointSound/: CMakeLists.txt  main.cpp
TrackpointSound/Exceptions/DevOpenFailException/: DevOpenFailException.hpp
TrackpointSound/Exceptions/EmptyAudioFolderException/: EmptyAudioFolderException.hpp
TrackpointSound/Exceptions/LoadSampleFromFileFailException/: LoadSampleFromFileFailException.hpp
TrackpointSound/Exceptions/TrackpointNotFoundException/: TrackpointNotFoundException.hpp
TrackpointSound/Exceptions/UdevContextFailException/: UdevContextFailException.hpp
TrackpointSound/utils/DeviceDiscovery/: DeviceDiscovery.cpp  DeviceDiscovery.hpp
TrackpointSound/utils/MouseDevice/: MouseDevice.cpp  MouseDevice.hpp
TrackpointSound/utils/SoundPlayer/: SoundPlayer.cpp  SoundPlayer.hpp
TrackpointSound/utils/SoundProducer/: SoundProducer.cpp  SoundProducer.hpp
src/: device_discovery.rs  error.rs  main.rs  mouse_device.rs  sound_player.rs
